2002-10-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/string.h (strcasecmp): Make extern __inline__.
	(strncasecmp): Likewise.
	(wcscmpi): Likewise.

2002-10-08  Heiko Gerdau  <hg@technosis.de>

	* include/tchar.h (_tchdir. _tgetcwd, _tgetdcwd.
	_tmkdir, _trmdir, _tstat): Add ASCII and UNICODE
	mappings.

2002-10-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/powil.c: Rename powil to __powil.
	* mingwex/math/powl.c: Adjust declaration and call
	to __powil. Remove comment on powil.
	* mingwex/math/powi.c: New file.
	* mingwex/math/powif.c: New file.
	* mingwex/math/pow.c: New file.
	* mingwex/math/cephes_mconf.h. Add double and float
	versions of constants.
	(polevl): Add double precision function.
	(p1evl): Likewise.
	* mingwex/Makefile.in (MATH_DISTFILES): Add pow.c,
	powi.c, powif.c.
	(MATH_OBJS): Add pow.o,	powi.o, powif.o.

2002-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cytpe.h (_imp____mbcur_max): Add missing ';'.
	(_imp____mbcur_max_dll): Likewise.

2002-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/fcntl.h (_fmode): Remove declarations and
	compatibility defines.
	(_setmode, setmode): Remove prototypes.
	* include/stdlib (_fmode): Add declarations and
	compatibility defines.  Change type to int.
	* include/io.h (_setmode, setmode): Add prototypes.
	* samples/fmode/all.c: Adjust includes.
	* samples/fmode/test.c: Likewise.
	* crt1.c (_CRT_fmode): Declare as int.
	* CRTfmode.c (_CRT_fmode): Likewise.

	* include/stdlib: Remove comment about MB_CUR_MAX.

2002-10-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (_imp____mbcur_max): Add missing ';'.
	(_imp____mbcur_max_dll): Likewise.

2002-09-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/files.txt: Remove inadvertantly added file.

2002-09-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/string.h (_strerror): Move into #ifndef
	__STRICT_ANSI__ block.
